<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">
<LinearLayout
    android:id="@+id/layout_signin"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="80dp"
    android:visibility="visible">


    <EditText
        android:id="@+id/signin_activity_editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signin_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signin_activity_editText_psswrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signin_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signin_activity_btn_signin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/signin_conn"
        android:backgroundTint="@color/colorPrimary"/>

    <Button
        android:id="@+id/signin_activity_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/signin_signup"
        android:backgroundTint="@color/colorPrimaryDark" />
</LinearLayout>



</RelativeLayout>