<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:visibility="visible"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="213dp">


        <EditText
            android:id="@+id/profile_activity_editText_afficheEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/signin_email"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/profile_activity_editText_creerPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signin_pass"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/profile_activity_editText_afficheNom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/charge_nom"
            android:textAlignment="center" />

        <Button
            android:id="@+id/profile_activity_btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@android:string/VideoView_error_button" />

        <TextView
            android:id="@+id/profile_activity_textView_annonce"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:text="@string/lister"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/layout_lister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/profile_activity_btn_listerAlpha"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/alphabet" />

            <Button
                android:id="@+id/profile_activity_btn_listerFav"
                android:layout_width="200dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/fav" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/avatar" />

</RelativeLayout>