<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Informations"
    android:orientation="vertical">



        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/activity_infos_floatingBtn_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                app:backgroundTint="@color/common_google_signin_btn_text_dark_pressed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/activity_infos_floatingBtn_desactiver"
                app:layout_constraintHorizontal_bias="0.99"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/activity_infos_floatingBtn_desactiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                app:backgroundTint="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_delete" />
        </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/activity_infos_textView_niv"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:text="@string/charge_niveai"
        android:textAlignment="center"
        android:textSize="18sp" />


    <ImageView
        android:id="@+id/activity_infos_imageView_niv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/orang_marker" />

    <EditText

        android:id="@+id/activity_infos_editText_nom"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginTop="15dp"
        android:autofillHints="Nom"
        android:hint="@string/charge_nom"
        android:inputType="text"
        android:textAlignment="center"
        tools:targetApi="o" />

    <EditText

        android:id="@+id/activity_infos_editText_numero"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="Numero"
        android:hint="@string/charge_telt"
        android:inputType="text"
        android:textAlignment="center"
        tools:targetApi="o" />

    <TextView
            android:id="@+id/activity_infos_textView_nbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/charge_nb"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/activity_infos_editText_nb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="Rue"
            android:hint="@string/charge_nb"
            android:inputType="number"
            android:textAlignment="center"
            tools:targetApi="o" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">
        <Button
            android:id="@+id/activity_infos_btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@android:string/VideoView_error_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/colorPrimary"  />






    </LinearLayout>
</LinearLayout>